[GLIB] Debian Stable & Ubuntu LTS build is failing after r291093 https://bugs.webkit.org/show_bug.cgi?id=237756

Reviewed by Carlos Garcia Campos.

Use `soup_websocket_connection_send_message` when SOUP < 2.67.3.

* UIProcess/Inspector/glib/RemoteInspectorHTTPServer.cpp:



Canonical link: https://commits.webkit.org/248310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291150 268f45cc-cd09-0410-ab3c-d52691b4dbfc